[package]
name = "solana-builtins-default-costs"
description = "Solana builtins default costs"
documentation = "https://docs.rs/solana-builtins-default-costs"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
# Add additional builtin programs here

[lib]
crate-type = ["lib"]
name = "solana_builtins_default_costs"

[features]
agave-unstable-api = []
dev-context-only-utils = ["dep:qualifier_attr"]

[dependencies]
agave-feature-set = { workspace = true }
ahash = { workspace = true }
qualifier_attr = { workspace = true, optional = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }

[dev-dependencies]
solana-pubkey = { workspace = true, features = ["std"] }
static_assertions = { workspace = true }

[lints]
workspace = true
