[package]
name = "solana-clap-v3-utils"
description = "Solana utilities for the clap v3"
documentation = "https://docs.rs/solana-clap-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "solana_clap_v3_utils"

[dependencies]
chrono = { workspace = true, features = ["default"] }
clap = { version = "3.2.23", features = ["cargo"] }
rpassword = { workspace = true }
solana-clock = { workspace = true }
solana-cluster-type = { workspace = true }
solana-commitment-config = { workspace = true }
solana-derivation-path = { workspace = true }
# the borsh feature is required to use the value_parser macro
solana-hash = { workspace = true, features = ["borsh"] }
solana-keypair = { workspace = true, features = ["seed-derivable"] }
solana-message = { workspace = true }
solana-native-token = { workspace = true }
solana-presigner = { workspace = true }
solana-pubkey = { workspace = true }
solana-remote-wallet = { workspace = true, features = ["default"] }
solana-seed-derivable = { workspace = true }
solana-seed-phrase = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-zk-token-sdk = { workspace = true }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
uriparse = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-pubkey = { workspace = true, features = ["rand"] }
solana-system-interface = { workspace = true, features = ["bincode"] }
tempfile = { workspace = true }
